force-app/main/default/objects/Repair_Request__c/fields/Issue_Category__c.field-meta.xml
<CustomField>
    <fullName>Issue_Category__c</fullName>
    <description>Service classification</description>
    <label>Issue Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Other</fullName>
                <default>true</default>
                <label>Other</label>
            </value>
            <value>
                <fullName>Refrigeration</fullName>
            </value>
            <value>
                <fullName>Heating</fullName>
            </value>
            <value>
                <fullName>Plumbing</fullName>
            </value>
            <value>
                <fullName>Smart Controls</fullName>
            </value>
            <value>
                <fullName>General Electric</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>