force-app/main/default/objects/Repair_Request__c/fields/Issue_Description__c.field-meta.xml
<CustomField>
    <fullName>Issue_Description__c</fullName>
    <description>Problem details</description>
    <inlineHelpText>Describe the specific problem or error messages indicated by the customer.</inlineHelpText>
    <label>Issue Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>