force-app/main/default/objects/Repair_Request__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Repair Requests</relationshipLabel>
    <relationshipName>Repair_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>