force-app/main/default/objects/Repair_Request__c/fields/Repair_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Repair_Outcome__c</fullName>
    <label>Repair Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fixed</fullName>
            </value>
            <value>
                <fullName>Replaced</fullName>
            </value>
            <value>
                <fullName>No Fault Found</fullName>
            </value>
            <value>
                <fullName>Customer Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>