force-app/main/default/objects/Repair_Request__c/fields/Repair_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Repair_Start_Date__c</fullName>
    <label>Repair Start Date</label>
    <type>DateTime</type>
</CustomField>