force-app/main/default/objects/Repair_Request__c/fields/Resolution_Date__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Date__c</fullName>
    <description>Auto-populated when status becomes Completed</description>
    <label>Resolution Date</label>
    <type>Date</type>
</CustomField>