force-app/main/default/objects/Repair_Request__c/fields/Service_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Service_Zip_Code__c</fullName>
    <label>Service Zip Code</label>
    <length>6</length>
    <required>true</required>
    <type>Text</type>
</CustomField>