force-app/main/default/objects/Repair_Request__c/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Territory</label>
    <referenceTo>Territory__c</referenceTo>
    <relationshipLabel>Repair Requests</relationshipLabel>
    <relationshipName>Repair_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>