force-app/main/default/objects/Repair_Request__c/fields/Warranty__c.field-meta.xml
<CustomField>
    <fullName>Warranty__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Warranty</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Warranty__c.Product__c</field>
            <operation>equals</operation>
            <valueField>$Source.Product__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Warranty__c</referenceTo>
    <relationshipLabel>Repair Requests</relationshipLabel>
    <relationshipName>Repair_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>