force-app/main/default/objects/Repair_Request__c/validationRules/VR_Warranty_belongs_to_selected_Product.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Warranty_belongs_to_selected_Product</fullName>
    <active>true</active>
    <description>Warranty should belongs to Product on repair request.</description>
    <errorConditionFormula>AND(
NOT(ISBLANK(Warranty__c)),
Warranty__r.Product__c &lt;&gt; Product__c
)</errorConditionFormula>
    <errorMessage>The selected Warranty does not belong to the selected Product.</errorMessage>
</ValidationRule>